export correctly done